--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-.container {
-    width: 200px;
-    height: 200px;
-    margin: 20px;
-    background: #0ff;
-
-    border: 3px solid #000;/*ширина рамки, тип лінії, колір*/
-    border-top: 10px dashed #808080;/*до різних частин рамки властивості можна задавати поокремо*/
+body {
+	background: red;
 }
